# anglerfish

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  anglerfish.py  demux.py  environment.yml  generici7i5.fa  pyproject.toml  requirements-dev-conda.txt  requirements-dev-pip.txt  requirements.txt  setup.py
.devcontainer/: dev.Dockerfile  devcontainer.json
.github/workflows/: anglerfish.yml  lint-code.yml  pypi.yml  test-code.yml
anglerfish/: __main__.py  anglerfish.py  cli.py
anglerfish/config/: adaptors.yaml
anglerfish/demux/: adaptor.py  demux.py  kladd.py  report.py  samplesheet.py
anglerfish/explore/: cli.py  entropy.py  explore.py
config/: adaptors.yaml  anglerfishrc.yaml
demux/: demux.py  samplesheet.py
scripts/: anglerfish.py
test/: samples.csv
testdata/: samples.csv
testdata/explore/: explore_testdata.fastq  illumina_ud.fasta  paf_alignment_dissected.txt
tests/: conftest.py  test_adaptor.py
tests/test_anglerfish/test_demux/: test_adaptor.py  test_demux.py
tests/test_demux/: test_demux.py
tests/test_explore/: test_explore.py
